# Document-Intelligence-Refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  README.md  pyproject.toml  refine_pdf.py
.github/workflows/: ci.yml
.refinery/: extraction_ledger.jsonl  summary_cache.json
.refinery/chunks/: CBE ANNUAL REPORT 2023-24.pdf.json_chunks.json
.refinery/db/: fact_table.db
.refinery/exploration/: tax_expenditure_ethiopia_2021_22.pdf_docling.json  tax_expenditure_ethiopia_2021_22.pdf_docling.md  tax_expenditure_ethiopia_2021_22.pdf_plumber.json
.refinery/extractions/: CBE ANNUAL REPORT 2023-24.pdf.json
.refinery/indices/: CBE ANNUAL REPORT 2023-24.pdf_page_index.json
.refinery/profiles/: Audit Report - 2023.pdf.json  CBE ANNUAL REPORT 2023-24.pdf.json  fta_performance_survey_final_report_2022.pdf.json  tax_expenditure_ethiopia_2021_22.pdf.json
.refinery/vectorstore/CBE ANNUAL REPORT 2023-24.pdf/: index.faiss  index.pkl  ingested_hashes.json
config/: refinery_config.yaml
rubric/: extraction_rules.yaml
scripts/: evaluate_retrieval_precision.py
src/: exploration.py  llm_factory.py
src/agents/: chunker.py  extractor.py  fact_extractor.py  indexer.py  indexer_optimized.py  query_agent.py  triage.py  vector_store.py
src/agents/prompts/: query_agent_audit.txt  query_agent_synthesis.txt  query_agent_system.txt
src/models/: __init__.py  types.py
src/strategies/: __init__.py  base.py  fast_text.py  layout_aware.py  vision_augmented.py
src/utils/: config_loader.py  doc_id_generator.py
tests/: test_audit_e2e.py  test_bbox_provenance.py  test_extraction_fast.py  test_extraction_layout.py  test_extraction_vision.py  test_extractor_router.py  test_fact_extraction.py  test_tool_routing.py  test_triage.py  test_triage_document_classes.py
