[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "A multi-stage agentic pipeline for intelligent document extraction and retrieval."
authors = [
    { name = "Yosef Zewdu", email = "yosef@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.76.0",
    "faiss-cpu>=1.13.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.0.10",
    "pdfplumber>=0.11.9",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "sentence-transformers>=3.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
