[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "A multi-stage agentic pipeline for intelligent document extraction and retrieval."
authors = [
    { name = "Yosef Zewdu", email = "yosef@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.76.0",
    "faiss-cpu>=1.13.2",
    "fast-langdetect>=1.0.0",
    "fastapi>=0.135.1",
    "huggingface-hub>=0.20.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=0.2.0",
    "langgraph>=1.0.10",
    "matplotlib>=3.10.8",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.2",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.31.0",
    "sentence-transformers>=3.4.1",
    "torchvision>=0.25.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
